--- a/co.html
+++ b/co.html
@@ -9,7 +9,9 @@
     <title>Shyam Solomon</title>
 </head>
 <body>
+<b>
 <div class="container-fluid">
+  <b>
   <nav class="navbar navbar-default">
        <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -25,13 +27,16 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="abt.html"><span class="glyphicon glyphicon-user"></span> About Me </a></li>
-        <li><a href="qual.html"><span class="glyphicon glyphicon-tags"> Qualification </a></li>
-        <li><a href="pro.html"><span class="glyphicon glyphicon-tags"> Project </a></li>
-        <li><a href="mypic.html"><span class="glyphicon glyphicon-picture"> Media</a></li>
-        <li class="active"><a href="co.html"><span class="glyphicon glyphicon-comment"> Contact Me</a></li>
+        <li><a href="qual.html"><span class="glyphicon glyphicon-tags"></span> Qualification </a></li>
+        <li><a href="pro.html"><span class="glyphicon glyphicon-tags"></span> Project </a></li>
+        <li><a href="mypic.html"><span class="glyphicon glyphicon-picture"></span> Media</a></li>
+        <li class="active"><a href="co.html"><span class="glyphicon glyphicon-comment"></span> Contact Me</a></li>
       </ul>
+      </div>
+      </b>
+      </nav>    
      </div><!-- /.navbar-collapse -->
-    </nav>
+    
     <div class="container-fluid">
 <h4>Home</h4>
   <div class="well">
@@ -46,5 +51,7 @@
 <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script><div style='overflow:hidden;height:440px;width:700px;'>
 <div id='gmap_canvas' style='height:440px;width:700px;'></div><div><small><a href="http://embedgooglemaps.com">Click here to generate your map!</a></small></div><div><small><a href="http://promocode.com.ph/zalora/">Click here to save up to 70% off from your favorite products</a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type='text/javascript'>function init_map(){var myOptions = {zoom:16,center:new google.maps.LatLng(12.910536206726647,80.09459479842108),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(12.910536206726647,80.09459479842108)});infowindow = new google.maps.InfoWindow({content:'<strong><b>Home</b></strong><br>Perungalathur<br>Chennai'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
 </div>
+</div>
+</b>
 </body>
 </html>
