--- a/mypic.html
+++ b/mypic.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+</span><!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="utf-8">
@@ -25,10 +25,10 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="abt.html"><span class="glyphicon glyphicon-user"></span> About Me </a></li>
-        <li><a href="pro.html"><span class="glyphicon glyphicon-tags"> Qualification </a></li>
-        <li><a href="pro.html"><span class="glyphicon glyphicon-tags"> Project </a></li>
-        <li class="active"><a href="mypic.html"><span class="glyphicon glyphicon-picture"> Media</a></li>
-        <li><a href="co.html"><span class="glyphicon glyphicon-comment"> Contact Me</a></li>
+        <li><a href="pro.html"><span class="glyphicon glyphicon-tags"></span> Qualification </a></li>
+        <li><a href="pro.html"><span class="glyphicon glyphicon-tags"></span> Project </a></li>
+        <li class="active"><a href="mypic.html"><span class="glyphicon glyphicon-picture"></span> Media</a></li>
+        <li><a href="co.html"><span class="glyphicon glyphicon-comment"></span> Contact Me</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </nav>
