--- a/shome.html
+++ b/shome.html
@@ -10,8 +10,9 @@
 </head>
 <body>
 <div>
-  <nav class="navbar navbar-inverse">
-       <div class="navbar-header">
+  <nav class="navbar navbar-default">
+      <b>
+      <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
@@ -25,12 +26,13 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="abt.html"><span class="glyphicon glyphicon-user"></span> About Me </a></li>
-        <li><a href="qual.html"><span class="glyphicon glyphicon-tags"> Qualification </a></li>
-        <li><a href="pro.html"><span class="glyphicon glyphicon-tags"> Project </a></li>
-        <li><a href="mypic.html"><span class="glyphicon glyphicon-picture"> Media</a></li>
-        <li><a href="co.html"><span class="glyphicon glyphicon-comment"> Contact Me</a></li>
+        <li><a href="qual.html"><span class="glyphicon glyphicon-tags"></span> Qualification </a></li>
+        <li><a href="pro.html"><span class="glyphicon glyphicon-tags"></span> Project </a></li>
+        <li><a href="mypic.html"><span class="glyphicon glyphicon-picture"></span> Media</a></li>
+        <li><a href="co.html"><span class="glyphicon glyphicon-comment"></span> Contact Me</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
+ 	</b>
   </nav>
 </div>
 <div class="container-fluid">
@@ -57,10 +59,11 @@ MongoDB,Big Data,Cloud Computing....</p>
 <h3>What i can do</h3>
 <p>I can create design web pages with Mobile Responsive <br>
 and some other Bootstrap controls like navbar,dropdown...etc
-
+</p>
 </div>
 
 </div>
 </div>
+
 </body>
 </html>
