--- a/pro.html
+++ b/pro.html
@@ -1,53 +1,15 @@
-</span><!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <title>Shyam Solomon</title>
-</head>
-<body>
-<div class="container-fluid">
-  <nav class="navbar navbar-default">
-       <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="shome.html"><span class="glyphicon glyphicon-home"></span> Home <span class="sr-only">(current)</span></a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><a href="abt.html"><span class="glyphicon glyphicon-user"></span> About Me </a></li>
-        <li><a href="qual.html"><span class="glyphicon glyphicon-tags"></span> Qualification </a></li>
-        <li class="active"><a href="pro.html"><span class="glyphicon glyphicon-tags"></span> Project </a></li>
-        <li><a href="mypic.html"><span class="glyphicon glyphicon-picture"></span> Media</a></li>
-        <li><a href="co.html"><span class="glyphicon glyphicon-comment"></span> Contact Me</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </nav>
-
-<br>
-<br>
-<div class="container-fluid">
+<div class="container">
 <div align="center">
-<div class="well"><h4><b>A Virtual Coordinate-Based Bypassing Void Routing For Wireless Sensor Networks</b></h4></div>
+<div class="well"><h4><b>A Virtual Coordinate-Based Bypassing Void Routing For Wireless Sensor Networks</b></h4>
+</div>
 
 <br>
 <br>
-<b><h4>Abstract</h4></b>
+<b><h3>Abstract</h3></b>
 <p>Inspired by the structure composed of edge nodes around which there is no routing void, an efficient bypassing void routing protocol based on virtual coordinates is proposed in this project. The basic idea of the protocol is to transform a random structure composed of void edges into a regular one by mapping edge nodes coordinates to a virtual circle. By utilizing the virtual circle, the greedy forwarding can be prevented from failing, so that there is no routing void in forwarding process from source to destination and control overhead can be reduced. Furthermore, the virtual circle is beneficial to reduce average length of routing paths and decrease transmission delay.</p>
+
 <br>
-<h2>System Architecture</h2>
+<h3>System Architecture</h3>
 <img src="p.jpg" alt="structure of WSN" class="img-responsive" style="width:640px;height:304px;">
 </div>
 </div>
-</div>
-</body>
-</html>
