--- a/qual.html
+++ b/qual.html
@@ -1,41 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <title>Shyam Solomon</title>
-</head>
-<body>
 <div class="container-fluid">
-  <nav class="navbar navbar-default">
-       <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="shome.html"><span class="glyphicon glyphicon-home"></span> Home <span class="sr-only">(current)</span></a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><a href="abt.html"><span class="glyphicon glyphicon-user"></span> About Me </a></li>
-        <li class="active"><a href="qual.html"><span class="glyphicon glyphicon-tags"></span></span> Qualification </a></li>
-        <li><a href="pro.html"><span class="glyphicon glyphicon-tags"></span> Project </a></li>
-        <li><a href="mypic.html"><span class="glyphicon glyphicon-picture"></span> Media</a></li>
-        <li><a href="co.html"><span class="glyphicon glyphicon-comment"></span> Contact Me</a></li>
-      </ul>
-      
-   
-    </div><!-- /.navbar-collapse -->
-  
-  </nav>
-
   <br>
   <br>
   <br>
@@ -51,9 +14,5 @@ I have scored 81% average in the Public Exam.
 <h3><b>B.E.</b></h3>
 <p>I have studied my B.E.(CSE) at Sri Ramanujar Engineering College during 2012-2016.
 <br>
-I have scored 6.7 CGPA.
+I have scored 6.7 CGPA.</p>
 </div>
-
-</div>
-</body>
-</html>
